--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,43 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url("https://fonts.googleapis.com/css2?family=Kalam&family=Mali:wght@300&display=swap");
+
+:root {
+  --dark-grey: #1c313a;
+  --grey: #455a64;
+  --light-grey: #718792;
+  --yellow: #ffc107;
+  --text: #eeeeee;
+  --black: #424242;
+  --black-shadow: #292929;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.gist__title {
+  display: none;
+}
+
+.gist__bash {
+  overflow-y: auto;
+  max-height: 500px;
+}
+
+.gist__bash .gist .gist-file {
+  margin-bottom: 0;
+}
+
+.type--h1,
+.type--h2 {
+  font-family: "Kalam", cursive;
+  position: relative;
+  margin-bottom: 40px;
+  display: inline-block;
+}
+
+.type--h1:after,
+.type--h2:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 4px;
+  bottom: -12px;
+  background: var(--yellow);
+  left: 0;
 }
